<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">otto</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="title_activity_parents">ParentsActivity</string>
    <string name="title_activity_new_service">NewServiceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="new_service_title">Start a Service</string>
    <string name="select_service_title">Select a Service to track</string>
    <string name="select_fav_title">or Select a favorite track</string>
    <string name="start_service">Start Service</string>
    <string name="select_route">Choose one route</string>
    <string name="no_route_selected">Select one route</string>
    <string name="insert_service_code">Insert Service Code</string>
    <string name="cancel_text">Cancel</string>
    <string name="delete_text">Delete</string>
    <string name="start_text">Start</string>
    <string name="title_activity_parent_menu">ParentMenuActivity</string>
    <string name="track_text">Track</string>
    <string name="send_message_hint">Send message</string>
    <string name="send_text">Send</string>
    <string name="route_ended_text">Route ended</string>
    <string name="fields_empty_error">Please, fill out all the fields</string>
    <string name="message_on_route">Message on route</string>
    <string name="in">in</string>
    <string name="minutes">minutes</string>
    <string name="insert_message">Insert Message</string>
    <string name="no_service_active_error">No service active for this code</string>

</resources>