<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/newServiceId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dip"
        android:layout_marginBottom="10dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_service_title" />
    
    <View
        android:id="@+id/titleLine"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/newServiceId"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginBottom="10dip"
        android:background="@color/driver_main_color" />
    
    <EditText
        android:id="@+id/serviceCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLine"
        android:layout_margin="5dp"
        android:inputType="number"
        android:maxLength="8"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/insert_service_code" />
    
    <Spinner
        android:id="@+id/selectRouteSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serviceCode"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:prompt="@string/select_route" />
    
    <RelativeLayout
        android:id="@+id/buttonsPanel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="2dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/driver_main_color" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view1"
            android:layout_toLeftOf="@+id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:maxHeight="55dp"
            android:text="@string/cancel_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/startServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/view1"
            android:layout_toRightOf="@+id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:maxHeight="55dp"
            android:text="@string/start_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/ViewColorPickerHelper"
            android:background="@color/driver_main_color" />
        
    </RelativeLayout>

</RelativeLayout>
