<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/selectService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dip"
        android:layout_marginBottom="10dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_service_title" />
    
    <View
        android:id="@+id/titleLine"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/selectService"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginBottom="10dip"
        android:background="@color/parents_main_color" />
    
    <RelativeLayout 
        android:id="@+id/trackBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="1dp"
        android:layout_below="@+id/titleLine" >
        
        <EditText
            android:id="@+id/serviceCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLength="8"
            android:layout_toLeftOf="@+id/regButton"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/insert_service_code" />
        
        <Button
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/track_text" />
    </RelativeLayout>
    
    <TextView
        android:id="@+id/selectFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="15dip"
        android:layout_marginBottom="10dip"
        android:layout_below="@+id/trackBar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_fav_title" />
    
    <View
        android:id="@+id/favLine"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/selectFav"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginBottom="10dip"
        android:background="@color/parents_main_color" />
    
    <LinearLayout
        android:id="@+id/favs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_below="@+id/favLine"
        android:orientation="vertical"
        />

</RelativeLayout>