<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.otto.DriverActivity"
    android:orientation="vertical" >
    
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.MapFragment" />
    
    <RelativeLayout 
        android:id="@+id/sendBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="1dp" >
        
        <!-- 
        <Button
            android:id="@+id/voice"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/mic" />
        -->
        
        <EditText
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@+id/send"
            android:hint="@string/send_message_hint" />
        
        <Button
            android:id="@+id/voice"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@+id/send"
            android:layout_centerVertical="true"
            android:background="@drawable/mic" />
        
        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="2dp"
            android:layout_centerVertical="true"
            android:text="@string/send_text" />
    </RelativeLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendBar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/route_ended_text" />
    
</RelativeLayout>
